bundled_metadata/force-app/main/default/objects/Campaign/fields/AFH_CampaignKey__c.field-meta.xml
<CustomField>
    <fullName>AFH_CampaignKey__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CampaignKey</label>
    <type>Text</type>
</CustomField>