bundled_metadata/force-app/main/default/objects/Campaign/fields/AFH_Competition_Consent_Text__c.field-meta.xml
<CustomField>
    <fullName>AFH_Competition_Consent_Text__c</fullName>
    <description>Stores the full mandatory consent statement.</description>
    <label>AFH Competition Consent Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>