bundled_metadata/force-app/main/default/objects/Campaign/fields/AFH_Intro_Details__c.field-meta.xml
<CustomField>
    <fullName>AFH_Intro_Details__c</fullName>
    <description>This field is used to provide Introduction about the Campaign</description>
    <label>AFH Intro Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>