bundled_metadata/force-app/main/default/objects/Campaign/fields/AFH_Intro_Title__c.field-meta.xml
<CustomField>
    <fullName>AFH_Intro_Title__c</fullName>
    <label>AFH Intro Title</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>