bundled_metadata/force-app/main/default/objects/Campaign/fields/AFH_IsAFHCampaign__c.field-meta.xml
<CustomField>
    <fullName>AFH_IsAFHCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Campaign is part of the AFH website campaigns</description>
    <label>IsAFHCampaign</label>
    <type>Checkbox</type>
</CustomField>