bundled_metadata/force-app/main/default/objects/Campaign/fields/AFH_Marketing_Consent_Text__c.field-meta.xml
<CustomField>
    <fullName>AFH_Marketing_Consent_Text__c</fullName>
    <description>Stores the marketing consent.</description>
    <label>AFH Marketing Consent Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>