bundled_metadata/force-app/main/default/objects/Campaign/fields/AFH_Sources__c.field-meta.xml
<CustomField>
    <fullName>AFH_Sources__c</fullName>
    <label>Sources</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>