bundled_metadata/force-app/main/default/objects/Campaign/fields/AFH_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>AFH_Subtitle__c</fullName>
    <description>This field is used to provide additional context or messaging below the Campaign title in Experience Cloud page</description>
    <label>AFH Subtitle</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>