bundled_metadata/force-app/main/default/objects/Campaign/fields/AFH_Terms_and_Conditions_Text__c.field-meta.xml
<CustomField>
    <fullName>AFH_Terms_and_Conditions_Text__c</fullName>
    <description>Stores campaign‑specific Terms &amp; Conditions content to show on the page.</description>
    <label>AFH Terms and Conditions Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>